--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vue-manage</title>
+    <script src="https://use.fontawesome.com/0da050a1eb.js"></script>
   </head>
   <body>
     <div id="app"></div>
