--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-homepage</title>
+    <title>vue-admin</title>
     <script src="https://use.fontawesome.com/0da050a1eb.js"></script>
   </head>
   <body>
